--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -12,6 +12,6 @@
     Add to shopping list
   </button>
   <button class="btn btn-warning" (click)="onEditRecipe()">Edit</button>
-  <button class="btn btn-danger">Delete</button>
+  <button class="btn btn-danger" (click)="onDeleteRecipe()">Delete</button>
 </div>
 
